--- a/home.html
+++ b/home.html
@@ -18,8 +18,9 @@
 						</div>
 						<div class="col-md-8">
 							<nav id="main-nav" class="text-right">
-								<a href="#">home</a>
-								<a href="#">shop</a>
+								<a href="#">clothing</a>
+								<a href="#">accessories</a>
+								<a href="#">shoes</a>
 								<a href="#">blog</a>
 								<a href="#">contact</a>
 							</nav>
@@ -80,7 +81,7 @@
 											</div>
 											<h6 class="product__title">Women’s Ripped Denim</h6>
 											<div class="product__footer">
-												<button class="product__add-to-cart-btn btn btn-primary">
+												<button class="product__add-to-cart-btn btn">
 													add to cart
 												</button>
 												<p class="product__price">$15.00</p>
@@ -94,7 +95,7 @@
 											</div>
 											<h6 class="product__title">Women’s Ripped Denim</h6>
 											<div class="product__footer">
-												<button class="product__add-to-cart-btn btn btn-primary">
+												<button class="product__add-to-cart-btn btn">
 													add to cart
 												</button>
 												<p class="product__price">$15.00</p>
@@ -104,11 +105,151 @@
 									<div class="col-xs-12 col-sm-6 col-lg-4">
 										<div class="product">
 											<div class="product__img">
-												<img src="assets/images/home.png" />
+												<img src="assets/images/shoes_v2.jpg" />
 											</div>
 											<h6 class="product__title">Women’s Ripped Denim</h6>
 											<div class="product__footer">
-												<button class="product__add-to-cart-btn btn btn-primary">
+												<button class="product__add-to-cart-btn btn">
+													add to cart
+												</button>
+												<p class="product__price">$15.00</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end category -->
+
+					<!-- start category -->
+					<div class="category container">
+						<div class="row">
+							<!-- info -->
+							<div
+								class="category-info-wrapper col-xs-12 col-md-4 col-lg-3"
+								style="background: url('assets/images/accessories_v2.jpg')"
+							>
+								<div class="overlay d-flex h-100">
+									<div class="category-info align-self-center">
+										<h2 class="category-title">accessories</h2>
+										<p class="category-description">
+											View our summer line of men and women’s clothing.
+										</p>
+										<button type="button" class="btn">view all</button>
+									</div>
+								</div>
+							</div>
+
+							<!-- products -->
+							<div class="category-products col-xs-12 col-md-8 col-lg-9">
+								<div class="row">
+									<div class="col-xs-12 col-sm-6 col-lg-4 ">
+										<div class="product">
+											<div class="product__img">
+												<img src="assets/images/product-photo-40-400x400.png" />
+											</div>
+											<h6 class="product__title">Women’s Ripped Denim</h6>
+											<div class="product__footer">
+												<button class="product__add-to-cart-btn btn">
+													add to cart
+												</button>
+												<p class="product__price">$15.00</p>
+											</div>
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-6 col-lg-4">
+										<div class="product">
+											<div class="product__img">
+												<img src="assets/images/product-photo-9-400x400.png" />
+											</div>
+											<h6 class="product__title">Women’s Ripped Denim</h6>
+											<div class="product__footer">
+												<button class="product__add-to-cart-btn btn">
+													add to cart
+												</button>
+												<p class="product__price">$15.00</p>
+											</div>
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-6 col-lg-4">
+										<div class="product">
+											<div class="product__img">
+												<img src="assets/images/image1xxl-5-2.jpg" />
+											</div>
+											<h6 class="product__title">Women’s Ripped Denim</h6>
+											<div class="product__footer">
+												<button class="product__add-to-cart-btn btn">
+													add to cart
+												</button>
+												<p class="product__price">$15.00</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end category -->
+
+					<!-- start category -->
+					<div class="category container">
+						<div class="row">
+							<!-- info -->
+							<div
+								class="category-info-wrapper col-xs-12 col-md-4 col-lg-3"
+								style="background: url('assets/images/shoes_v2.jpg')"
+							>
+								<div class="overlay d-flex h-100">
+									<div class="category-info align-self-center">
+										<h2 class="category-title">accessories</h2>
+										<p class="category-description">
+											View our summer line of men and women’s clothing.
+										</p>
+										<button type="button" class="btn">view all</button>
+									</div>
+								</div>
+							</div>
+
+							<!-- products -->
+							<div class="category-products col-xs-12 col-md-8 col-lg-9">
+								<div class="row">
+									<div class="col-xs-12 col-sm-6 col-lg-4 ">
+										<div class="product">
+											<div class="product__img">
+												<img src="assets/images/image1xxl-9-2.jpg" />
+											</div>
+											<h6 class="product__title">Women’s Ripped Denim</h6>
+											<div class="product__footer">
+												<button class="product__add-to-cart-btn btn">
+													add to cart
+												</button>
+												<p class="product__price">$15.00</p>
+											</div>
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-6 col-lg-4">
+										<div class="product">
+											<div class="product__img">
+												<img src="assets/images/product-photo-9-400x400.png" />
+											</div>
+											<h6 class="product__title">Women’s Ripped Denim</h6>
+											<div class="product__footer">
+												<button class="product__add-to-cart-btn btn">
+													add to cart
+												</button>
+												<p class="product__price">$15.00</p>
+											</div>
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-6 col-lg-4">
+										<div class="product">
+											<div class="product__img">
+												<img src="assets/images/image1xxl-5-2.jpg" />
+											</div>
+											<h6 class="product__title">Women’s Ripped Denim</h6>
+											<div class="product__footer">
+												<button class="product__add-to-cart-btn btn">
 													add to cart
 												</button>
 												<p class="product__price">$15.00</p>
@@ -124,7 +265,12 @@
 			</div>
 		</main>
 
-		<footer id="footer"></footer>
+		<footer id="footer">
+			<div class="top-footer">
+				<div class="container"></div>
+			</div>
+			<div class="bottom-footer"></div>
+		</footer>
 
 		<script src="assets/js/index.js"></script>
 	</body>
