--- a/home.html
+++ b/home.html
@@ -30,12 +30,13 @@
 			</div>
 
 			<div id="media-bg-wrapper">
-				<video class="media" autoplay loop muted>
+				<img class="media" src="assets/images/shop-1-e1462868996184.jpg" alt="" />
+				<!-- <video class="media" autoplay loop muted>
 					<source
 						src="assets/images/TRAVEL_VLOG- SANTORINI, GREECE.WEBM"
 						type="video/mp4"
 					/>
-				</video>
+				</video> -->
 			</div>
 
 			<div id="header-content">
