--- a/home.html
+++ b/home.html
@@ -442,7 +442,13 @@
 			<div class="top-footer">
 				<div class="container"></div>
 			</div>
-			<div class="bottom-footer"></div>
+			<div class="bottom-footer">
+				<div class="container">
+					<p>
+						Designed by A-Maged | © 2019 All Rights Reserved
+					</p>
+				</div>
+			</div>
 		</footer>
 
 		<script src="assets/js/index.js"></script>
