--- a/home.html
+++ b/home.html
@@ -80,9 +80,11 @@
 								<div class="col-xs-12 col-sm-6 col-lg-3">
 									<div class="product">
 										<div class="product__img">
-											<img
-												src="assets/images/Irregular-Women-s-Office-Lady-Shirt-Top.webp"
-											/>
+											<a href="">
+												<img
+													src="assets/images/Irregular-Women-s-Office-Lady-Shirt-Top.webp"
+												/>
+											</a>
 										</div>
 										<h6 class="product__title">Irregular Womens Office Lady Shirt Top</h6>
 										<div class="product__footer">
@@ -96,9 +98,11 @@
 								<div class="col-xs-12 col-sm-6 col-lg-3 ">
 									<div class="product">
 										<div class="product__img">
-											<img
-												src="assets/images/Classic-Polarized-Sunglasses-Men-Women.webp"
-											/>
+											<a href="">
+												<img
+													src="assets/images/Classic-Polarized-Sunglasses-Men-Women.webp"
+												/>
+											</a>
 										</div>
 										<h6 class="product__title">Women’s Ripped Denim</h6>
 										<div class="product__footer">
@@ -112,7 +116,9 @@
 								<div class="col-xs-12 col-sm-6 col-lg-3 ">
 									<div class="product">
 										<div class="product__img">
-											<img src="assets/images/product-photo-40-400x400.png" />
+											<a href="">
+												<img src="assets/images/product-photo-40-400x400.png" />
+											</a>
 										</div>
 										<h6 class="product__title">Women’s Ripped Denim</h6>
 										<div class="product__footer">
@@ -126,7 +132,11 @@
 								<div class="col-xs-12 col-sm-6 col-lg-3">
 									<div class="product">
 										<div class="product__img">
-											<img src="assets/images/4pcs-set-Handmade-Boho-Gypsy-Hippie.webp" />
+											<a href="">
+												<img
+													src="assets/images/4pcs-set-Handmade-Boho-Gypsy-Hippie.webp"
+												/>
+											</a>
 										</div>
 										<h6 class="product__title">Women’s Ripped Denim</h6>
 										<div class="product__footer">
@@ -140,7 +150,9 @@
 								<div class="col-xs-12 col-sm-6 col-lg-3">
 									<div class="product">
 										<div class="product__img">
-											<img src="assets/images/product-photo-9-400x400.png" />
+											<a href="">
+												<img src="assets/images/product-photo-9-400x400.png" />
+											</a>
 										</div>
 										<h6 class="product__title">Women’s Ripped Denim</h6>
 										<div class="product__footer">
@@ -155,7 +167,9 @@
 								<div class="col-xs-12 col-sm-6 col-lg-3">
 									<div class="product">
 										<div class="product__img">
-											<img src="assets/images/Formal-Leather-Oxfords-Shoes-Men.webp" />
+											<a href="">
+												<img src="assets/images/Formal-Leather-Oxfords-Shoes-Men.webp" />
+											</a>
 										</div>
 										<h6 class="product__title">Formal Leather Oxfords Shoes Men</h6>
 										<div class="product__footer">
@@ -169,9 +183,11 @@
 								<div class="col-xs-12 col-sm-6 col-lg-3 ">
 									<div class="product">
 										<div class="product__img">
-											<img
-												src="assets/images/Solid-2-Colors-Women-Crew-Neck-Short-Sleeve.webp"
-											/>
+											<a href="">
+												<img
+													src="assets/images/Solid-2-Colors-Women-Crew-Neck-Short-Sleeve.webp"
+												/>
+											</a>
 										</div>
 										<h6 class="product__title">Women’s Ripped Denim</h6>
 										<div class="product__footer">
@@ -185,7 +201,9 @@
 								<div class="col-xs-12 col-sm-6 col-lg-3">
 									<div class="product">
 										<div class="product__img">
-											<img src="assets/images/Zogaa-2019-Baseball-Jacket.webp" />
+											<a href="">
+												<img src="assets/images/Zogaa-2019-Baseball-Jacket.webp" />
+											</a>
 										</div>
 										<h6 class="product__title">Women’s Ripped Denim</h6>
 										<div class="product__footer">
@@ -229,9 +247,11 @@
 										<div class="col-xs-12 col-sm-6 col-lg-4 ">
 											<div class="product">
 												<div class="product__img">
-													<img
-														src="assets/images/ROMWE-Brown-Soild-Button-Front-Cami-Top-With-Belted-Shorts-font-b-Women-b-font-Summer.jpg_220x220xz.webp"
-													/>
+													<a href="">
+														<img
+															src="assets/images/ROMWE-Brown-Soild-Button-Front-Cami-Top-With-Belted-Shorts-font-b-Women-b-font-Summer.jpg_220x220xz.webp"
+														/>
+													</a>
 												</div>
 												<h6 class="product__title">
 													Romwe Brown Soild Button Front Cami Top With Belted Shorts
@@ -247,7 +267,9 @@
 										<div class="col-xs-12 col-sm-6 col-lg-4">
 											<div class="product">
 												<div class="product__img">
-													<img src="assets/images/New-Men-Shirts.jpg" />
+													<a href="">
+														<img src="assets/images/New-Men-Shirts.jpg" />
+													</a>
 												</div>
 												<h6 class="product__title">Men Shirts</h6>
 												<div class="product__footer">
@@ -261,9 +283,11 @@
 										<div class="col-xs-12 col-sm-6 col-lg-4">
 											<div class="product">
 												<div class="product__img">
-													<img
-														src="assets/images/2018-New-Men-Joggers-Brand-Male-Trousers-Casual-Pants-Sweatpants-Jogger-.webp"
-													/>
+													<a href="">
+														<img
+															src="assets/images/2018-New-Men-Joggers-Brand-Male-Trousers-Casual-Pants-Sweatpants-Jogger-.webp"
+														/>
+													</a>
 												</div>
 												<h6 class="product__title">
 													Men Joggers
@@ -307,9 +331,11 @@
 										<div class="col-xs-12 col-sm-6 col-lg-4 ">
 											<div class="product">
 												<div class="product__img">
-													<img
-														src="assets/images/YAZOLE-2017-Fashion-Quartz-Watch-Men-Watches.webp"
-													/>
+													<a href="">
+														<img
+															src="assets/images/YAZOLE-2017-Fashion-Quartz-Watch-Men-Watches.webp"
+														/>
+													</a>
 												</div>
 												<h6 class="product__title">Women’s Ripped Denim</h6>
 												<div class="product__footer">
@@ -323,9 +349,11 @@
 										<div class="col-xs-12 col-sm-6 col-lg-4">
 											<div class="product">
 												<div class="product__img">
-													<img
-														src="assets/images/4pcs-set-Handmade-Boho-Gypsy-Hippie.webp"
-													/>
+													<a href="">
+														<img
+															src="assets/images/4pcs-set-Handmade-Boho-Gypsy-Hippie.webp"
+														/>
+													</a>
 												</div>
 												<h6 class="product__title">Women’s Ripped Denim</h6>
 												<div class="product__footer">
@@ -339,9 +367,11 @@
 										<div class="col-xs-12 col-sm-6 col-lg-4">
 											<div class="product">
 												<div class="product__img">
-													<img
-														src="assets/images/Vintage-Women-Bohemian-Pearl-Short-Choker-Necklace.webp"
-													/>
+													<a href="">
+														<img
+															src="assets/images/Vintage-Women-Bohemian-Pearl-Short-Choker-Necklace.webp"
+														/>
+													</a>
 												</div>
 												<h6 class="product__title">Women’s Ripped Denim</h6>
 												<div class="product__footer">
@@ -383,9 +413,11 @@
 										<div class="col-xs-12 col-sm-6 col-lg-4 ">
 											<div class="product">
 												<div class="product__img">
-													<img
-														src="assets/images/Summer-Woman-Vulcanized-Casual-Shoes-Women-Platform-Sneakers.webp"
-													/>
+													<a href="">
+														<img
+															src="assets/images/Summer-Woman-Vulcanized-Casual-Shoes-Women-Platform-Sneakers.webp"
+														/>
+													</a>
 												</div>
 												<h6 class="product__title">Women’s Ripped Denim</h6>
 												<div class="product__footer">
@@ -399,9 +431,11 @@
 										<div class="col-xs-12 col-sm-6 col-lg-4">
 											<div class="product">
 												<div class="product__img">
-													<img
-														src="assets/images/Formal-Leather-Oxfords-Shoes-Men.webp"
-													/>
+													<a href="">
+														<img
+															src="assets/images/Formal-Leather-Oxfords-Shoes-Men.webp"
+														/>
+													</a>
 												</div>
 												<h6 class="product__title">Women’s Ripped Denim</h6>
 												<div class="product__footer">
@@ -415,9 +449,11 @@
 										<div class="col-xs-12 col-sm-6 col-lg-4">
 											<div class="product">
 												<div class="product__img">
-													<img
-														src="assets/images/Women-Sandals-Bling-Crystal-Summer.webp"
-													/>
+													<a href="">
+														<img
+															src="assets/images/Women-Sandals-Bling-Crystal-Summer.webp"
+														/>
+													</a>
 												</div>
 												<h6 class="product__title">Women’s Ripped Denim</h6>
 												<div class="product__footer">
