--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 						Lorem ipsum dolo sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 						sit amet, consectetur adipisicing elit,sed sit amet, adipisicing elit,sed
 					</h5>
-					<button class="btn btn-danger">shop now</button>
+					<button class="btn btn-outline-light">shop now</button>
 				</span>
 			</div>
 		</header>
@@ -260,7 +260,7 @@
 											<p class="category-description">
 												View our summer line of men and women’s clothing.
 											</p>
-											<button type="button" class="btn">
+											<button type="button" class="btn btn-outline-light">
 												view all
 											</button>
 										</div>
@@ -356,7 +356,7 @@
 											<p class="category-description">
 												View our summer line of men and women’s clothing.
 											</p>
-											<button type="button" class="btn">
+											<button type="button" class="btn btn-outline-light">
 												view all
 											</button>
 										</div>
@@ -454,7 +454,7 @@
 											<p class="category-description">
 												View our summer line of men and women’s clothing.
 											</p>
-											<button type="button" class="btn">
+											<button type="button" class="btn btn-outline-light">
 												view all
 											</button>
 										</div>
