--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link
-			href="https://fonts.googleapis.com/css?family=Roboto:400,500"
+			href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="assets/style/index.scss" />
@@ -13,14 +13,15 @@
 	<body>
 		<header id="header">
 			<div id="top-bar">
-				<div class="container-fluid">
+				<div id="news">hurry up before the sale ends!</div>
+				<div class="container">
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-md-2">
 							<div id="logo">
 								<img src="assets/images/logo-no-padding.png" alt="" />
 							</div>
 						</div>
-						<div class="col-md-8 align-self-center">
+						<div class="col-md-10 align-self-center">
 							<div class="right-wrapper">
 								<nav id="main-nav" class="text-right">
 									<a href="#">clothing</a>
@@ -28,6 +29,7 @@
 									<a href="#">shoes</a>
 									<a href="#">blog</a>
 									<a href="#">contact</a>
+									<a href="#">cart</a>
 								</nav>
 								<form class="form-inline">
 									<input
